added api docs for products
